# dj-assistant

./: .gitignore  Makefile  config.py  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 817e8f1208e7_init.py  d5da8be3aaf0_init.py
app/: __init__.py  models.py  routes.py
app/templates/: genres.html  index.html  tracks.html
app/utils/: spotify.py
